@@ -75,6 +75,8 @@ program plotpltn
   !****************************************************************************************************
   
   
+  !Remove 'uninitialised' compiler warnings:
+  hrd = 0
   
   
   
